Add main entry point to execute experiments. Refined audio classification, text to audio retrieval and fine tune audio classification experiments

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 transformers
 torch
-torchvision
 pandas
 torchaudio
 numpy
@@ -9,4 +8,4 @@ matplotlib
 tqdm
 seaborn
 ipython
-laion-clap
+sounddevice
